src/test/ui/issues/issue-21763.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
  --> $DIR/issue-21763.rs:9:5
   |
LL | fn foo<T: Send>() {}
   |           ---- required by this bound in `foo`
...
LL |     foo::<HashMap<Rc<()>, Rc<()>>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
   |
   = help: within `(Rc<()>, Rc<()>)`, the trait `Send` is not implemented for `Rc<()>`
   = note: required because it appears within the type `(Rc<()>, Rc<()>)`
   = note: required because of the requirements on the impl of `Send` for `hashbrown::raw::RawTable<(Rc<()>, Rc<()>)>`
   = note: required because it appears within the type `hashbrown::map::HashMap<Rc<()>, Rc<()>, RandomState>`
   = note: required because it appears within the type `HashMap<Rc<()>, Rc<()>>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
